css/style.css
/* ----------------- CSS RESET ------------------- */

* {
  padding: 0;
  margin: 0;
  font-size: 110%;
  line-height: 1em;
}

/* ------- MAIN STYLING ----------- */

body {
    width: 75%;
    max-width: 670px;
    margin: auto;
    background: #fafafa;
    color: #333;
}
/* ------------------ typography ----------------------------*/
h1, h2, h3 {
  font-weight: normal;
  color: darkgreen;
  text-align: center;
}

p, li, blockquote {
  margin-bottom: 1.5em;
  line-height: 1.4
}

h1 {
  font-size: 3.998em;
  margin-top: 1em;
  margin-bottom: 0.1em;

}

h2 {
  font-size: 2.827em;
  margin: 1em 0
}

h3 {
  font-size: 1.999em;
}

blockquote {
  hanging-punctuation: first;
  text-indent: -0.5em;
}

header h2 {
  font-style: italic;
  font-size: 2.35em;
  margin-top: 0.1em;
  color: #333;
}

.eaves {
  color: grey;
}

/* ----------- STYLE LINKS -------------------*/

a {
color: darkgreen;
text-decoration: none;
}

a:hover {
  color: #006341;
  border-bottom: 1px dotted;
}

/* --------------- NAVIGATION --------------------*/

nav {
  position: fixed;
  top: 0;
  left: 0;
  margin: 0;
  width: 100%;
  background-color: rgba: 102, 0, 102, 0.5; /* ------ WAS DARKGREEN -------*/
  padding: 1em 0;
  font-size: 0.75em;
}

nav ul {
  text-align: center;
  text-transform: uppercase;
  letter-spacing: 2px;
}

nav ul li {
  display: inline;
  margin: 20px;
}

nav a:link {
  color: #fff;
}

nav a:visited {
  color: grey;
}
nav a:hover {
  border-bottom: none;
  color: black;
}

/* ----------------BLOCKQUOTE ---------------------*/
blockquote {
  padding: 1em 0 4em 0;
  font-size: 1.75em;
  line-height: 1.3em;
  color: #777;
}
 /*------------ LOOK FOR CITE -----------*/
blockquote cite {
  font-size: 0.7em;
}

/* ---------------- INTERACTIVE IMAGES ------------*/
img {
  display: block;
  margin: 1em auto;
  padding: 0;
  max-width: 100%;
}

/* ---------------- FOOTER -------------------*/

footer{
  text-align: center;
  font-size: 0.75em;
  line-height: 1.5em;
  padding: 2em 0;
}

hr {
  margin: 1em 0;
  height: 1px;
  background-color: #c06;
  color: #c06;
  border: 0 none;
}

